fix double scroll bar issue in content map (Jira bug 95)

--- a/app/styles/views/RLOBaseView.scss
+++ b/app/styles/views/RLOBaseView.scss
@@ -21,6 +21,9 @@
         opacity: 0;
         transform: scale(0.1);
     }
+    &.no-scroll {
+        overflow: hidden;
+    }
 }
 
 .rlo-base-content-container{
